# sessionmark

./: .gitignore  README.md  REDESIGN_PROMPT.md  pyproject.toml  sessionmark_redesign_prompt.docx
.github/workflows/: release.yml  test.yml
src/bookmark/: __init__.py  __main__.py  cli.py  config.py  redact.py  sync.py
src/bookmark/briefing/: __init__.py  template.py
src/bookmark/briefing/providers/: __init__.py  anthropic.py  base.py  google.py  groq.py  ollama.py  openai.py
src/bookmark/capture/: __init__.py  env.py  files.py  git.py  shell.py  todos.py
src/bookmark/capture/agents/: __init__.py  aider.py  base.py  claude_code.py  codex.py  cursor.py  gemini.py  github_copilot.py  jetbrains.py
src/bookmark/core/: __init__.py  delete.py  diff.py  doctor.py  import_.py  list.py  models.py  resume.py  save.py  search.py
src/bookmark/export/: __init__.py  markdown.py  paste.py
src/bookmark/export/templates/: aider.md.j2  claude.md.j2  codex.md.j2  cursor.md.j2  gemini.md.j2  generic.md.j2
src/bookmark/install/: __init__.py  context_writer.py  hooks.py  installer.py
src/bookmark/mcp/: __init__.py  server.py
src/bookmark/skills/aider/: CONVENTIONS.md
src/bookmark/skills/claude_code/: SKILL.md
src/bookmark/skills/codex/: bookmark.md
src/bookmark/skills/cursor/: bookmark.mdc
src/bookmark/storage/: __init__.py  blobs.py  db.py
tests/: conftest.py  test_briefing_providers.py  test_capture_agents.py  test_cli.py  test_config.py  test_context_writer.py  test_diff.py  test_doctor.py  test_export_paste.py  test_import_export.py  test_install.py  test_mcp_server.py  test_multi_agent.py  test_redact.py  test_resume.py  test_save_resume.py  test_search.py  test_storage.py  test_sync.py
tests/fixtures/redaction_corpus/: secrets.txt
(+2 files in other folders)
