[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sessionmark"
version = "0.1.0"
description = "Save and resume AI coding sessions with full context"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai", "claude", "cursor", "codex", "session", "bookmark", "mcp", "context"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9",
    "rich>=13",
    "pydantic>=2",
    "jinja2>=3",
    "mcp>=1",
]

[project.urls]
"Homepage" = "https://github.com/smukhopa/sessionmark"
"Repository" = "https://github.com/smukhopa/sessionmark"
"Issues" = "https://github.com/smukhopa/sessionmark/issues"

[project.optional-dependencies]
llm = ["httpx>=0.27"]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
sessionmark = "bookmark.cli:app"
sm = "bookmark.cli:app"
sessionmark-mcp = "bookmark.mcp.server:run"

[tool.hatch.build.targets.wheel]
packages = ["src/bookmark"]

[tool.hatch.build.targets.sdist]
include = ["src/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
